src/config_parser/config_parser.output
Grammar

    0 $accept: configuration "end of file"

    1 configuration: settings includes basics_declaration types_declaration settables_declaration triggerables_declaration "end of file"

    2 settings: "settings" '{' settings_list '}' ';'

    3 includes: /* empty */
    4         | "includes" '{' includes_list '}' ';'

    5 types_declaration: /* empty */
    6                  | "types" '{' type_declarations '}' ';'

    7 basics_declaration: /* empty */
    8                   | "basics" '{' basic_declarations '}' ';'

    9 settables_declaration: /* empty */
   10                      | "settables" '{' settable_declarations '}' ';'

   11 triggerables_declaration: /* empty */
   12                         | "triggerables" '{' triggerable_declarations '}' ';'

   13 settings_list: setting ';'
   14              | setting ';' settings_list

   15 includes_list: include
   16              | include includes_list

   17 type_declarations: type_declaration ';'
   18                  | type_declaration ';' type_declarations

   19 basic_declarations: basic_declaration ';'
   20                   | basic_declaration ';' basic_declarations

   21 settable_declarations: settable_declaration ';'
   22                      | settable_declaration ';' settable_declarations

   23 triggerable_declarations: triggerable_declaration ';'
   24                         | triggerable_declaration ';' triggerable_declarations

   25 setting: "input" '=' "filename"
   26        | "output" '=' "filename"
   27        | "header" '=' "filename"
   28        | "basics" '=' "filename"
   29        | "max_events" '=' "integer"

   30 include: "#include" "include file"

   31 type_declaration: type_declaration_cases

   32 basic_declaration: basic_declaration_cases

   33 settable_declaration: "atom"

   34 triggerable_declaration: '+' "atom"
   35                        | '-' "atom"
   36                        | '+' '!' "atom"

   37 type_declaration_cases: symbol_name parameter_list
   38                       | symbol_name

   39 basic_declaration_cases: return_type symbol_name parameter_list

   40 parameter_list: '(' parameter_types ')'
   41               | '(' "void" ')'
   42               | '(' ')'

   43 return_type: "void"
   44            | type_identifier

   45 symbol_name: "atom"

   46 parameter_types: type_identifier
   47                | type_identifier ',' parameter_types

   48 type_identifier: identifier

   49 identifier: "atom"
   50           | "identifier"


Terminals, with rules where they appear

"end of file" (0) 0 1
'!' (33) 36
'(' (40) 40 41 42
')' (41) 40 41 42
'+' (43) 34 36
',' (44) 47
'-' (45) 35
';' (59) 2 4 6 8 10 12 13 14 17 18 19 20 21 22 23 24
'=' (61) 25 26 27 28 29
'{' (123) 2 4 6 8 10 12
'}' (125) 2 4 6 8 10 12
error (256)
"void" (258) 41 43
"settings" (259) 2
"input" (260) 25
"output" (261) 26
"header" (262) 27
"max_events" (263) 29
"integer" (264) 29
"filename" (265) 25 26 27 28
"includes" (266) 4
"#include" (267) 30
"include file" (268) 30
"basics" (269) 8 28
"types" (270) 6
"settables" (271) 10
"triggerables" (272) 12
"atom" (273) 33 34 35 36 45 49
"identifier" (274) 50


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
configuration (31)
    on left: 1, on right: 0
settings (32)
    on left: 2, on right: 1
includes (33)
    on left: 3 4, on right: 1
types_declaration (34)
    on left: 5 6, on right: 1
basics_declaration (35)
    on left: 7 8, on right: 1
settables_declaration (36)
    on left: 9 10, on right: 1
triggerables_declaration (37)
    on left: 11 12, on right: 1
settings_list (38)
    on left: 13 14, on right: 2 14
includes_list (39)
    on left: 15 16, on right: 4 16
type_declarations (40)
    on left: 17 18, on right: 6 18
basic_declarations (41)
    on left: 19 20, on right: 8 20
settable_declarations (42)
    on left: 21 22, on right: 10 22
triggerable_declarations (43)
    on left: 23 24, on right: 12 24
setting (44)
    on left: 25 26 27 28 29, on right: 13 14
include (45)
    on left: 30, on right: 15 16
type_declaration (46)
    on left: 31, on right: 17 18
basic_declaration (47)
    on left: 32, on right: 19 20
settable_declaration (48)
    on left: 33, on right: 21 22
triggerable_declaration (49)
    on left: 34 35 36, on right: 23 24
type_declaration_cases (50)
    on left: 37 38, on right: 31
basic_declaration_cases (51)
    on left: 39, on right: 32
parameter_list (52)
    on left: 40 41 42, on right: 37 39
return_type (53)
    on left: 43 44, on right: 39
symbol_name (54)
    on left: 45, on right: 37 38 39
parameter_types (55)
    on left: 46 47, on right: 40 47
type_identifier (56)
    on left: 48, on right: 44 46 47
identifier (57)
    on left: 49 50, on right: 48


state 0

    0 $accept: . configuration "end of file"

    "settings"  shift, and go to state 1

    configuration  go to state 2
    settings       go to state 3


state 1

    2 settings: "settings" . '{' settings_list '}' ';'

    '{'  shift, and go to state 4


state 2

    0 $accept: configuration . "end of file"

    "end of file"  shift, and go to state 5


state 3

    1 configuration: settings . includes basics_declaration types_declaration settables_declaration triggerables_declaration "end of file"

    "includes"  shift, and go to state 6

    $default  reduce using rule 3 (includes)

    includes  go to state 7


state 4

    2 settings: "settings" '{' . settings_list '}' ';'

    "input"       shift, and go to state 8
    "output"      shift, and go to state 9
    "header"      shift, and go to state 10
    "max_events"  shift, and go to state 11
    "basics"      shift, and go to state 12

    settings_list  go to state 13
    setting        go to state 14


state 5

    0 $accept: configuration "end of file" .

    $default  accept


state 6

    4 includes: "includes" . '{' includes_list '}' ';'

    '{'  shift, and go to state 15


state 7

    1 configuration: settings includes . basics_declaration types_declaration settables_declaration triggerables_declaration "end of file"

    "basics"  shift, and go to state 16

    $default  reduce using rule 7 (basics_declaration)

    basics_declaration  go to state 17


state 8

   25 setting: "input" . '=' "filename"

    '='  shift, and go to state 18


state 9

   26 setting: "output" . '=' "filename"

    '='  shift, and go to state 19


state 10

   27 setting: "header" . '=' "filename"

    '='  shift, and go to state 20


state 11

   29 setting: "max_events" . '=' "integer"

    '='  shift, and go to state 21


state 12

   28 setting: "basics" . '=' "filename"

    '='  shift, and go to state 22


state 13

    2 settings: "settings" '{' settings_list . '}' ';'

    '}'  shift, and go to state 23


state 14

   13 settings_list: setting . ';'
   14              | setting . ';' settings_list

    ';'  shift, and go to state 24


state 15

    4 includes: "includes" '{' . includes_list '}' ';'

    "#include"  shift, and go to state 25

    includes_list  go to state 26
    include        go to state 27


state 16

    8 basics_declaration: "basics" . '{' basic_declarations '}' ';'

    '{'  shift, and go to state 28


state 17

    1 configuration: settings includes basics_declaration . types_declaration settables_declaration triggerables_declaration "end of file"

    "types"  shift, and go to state 29

    $default  reduce using rule 5 (types_declaration)

    types_declaration  go to state 30


state 18

   25 setting: "input" '=' . "filename"

    "filename"  shift, and go to state 31


state 19

   26 setting: "output" '=' . "filename"

    "filename"  shift, and go to state 32


state 20

   27 setting: "header" '=' . "filename"

    "filename"  shift, and go to state 33


state 21

   29 setting: "max_events" '=' . "integer"

    "integer"  shift, and go to state 34


state 22

   28 setting: "basics" '=' . "filename"

    "filename"  shift, and go to state 35


state 23

    2 settings: "settings" '{' settings_list '}' . ';'

    ';'  shift, and go to state 36


state 24

   13 settings_list: setting ';' .
   14              | setting ';' . settings_list

    "input"       shift, and go to state 8
    "output"      shift, and go to state 9
    "header"      shift, and go to state 10
    "max_events"  shift, and go to state 11
    "basics"      shift, and go to state 12

    $default  reduce using rule 13 (settings_list)

    settings_list  go to state 37
    setting        go to state 14


state 25

   30 include: "#include" . "include file"

    "include file"  shift, and go to state 38


state 26

    4 includes: "includes" '{' includes_list . '}' ';'

    '}'  shift, and go to state 39


state 27

   15 includes_list: include .
   16              | include . includes_list

    "#include"  shift, and go to state 25

    $default  reduce using rule 15 (includes_list)

    includes_list  go to state 40
    include        go to state 27


state 28

    8 basics_declaration: "basics" '{' . basic_declarations '}' ';'

    "void"        shift, and go to state 41
    "atom"        shift, and go to state 42
    "identifier"  shift, and go to state 43

    basic_declarations       go to state 44
    basic_declaration        go to state 45
    basic_declaration_cases  go to state 46
    return_type              go to state 47
    type_identifier          go to state 48
    identifier               go to state 49


state 29

    6 types_declaration: "types" . '{' type_declarations '}' ';'

    '{'  shift, and go to state 50


state 30

    1 configuration: settings includes basics_declaration types_declaration . settables_declaration triggerables_declaration "end of file"

    "settables"  shift, and go to state 51

    $default  reduce using rule 9 (settables_declaration)

    settables_declaration  go to state 52


state 31

   25 setting: "input" '=' "filename" .

    $default  reduce using rule 25 (setting)


state 32

   26 setting: "output" '=' "filename" .

    $default  reduce using rule 26 (setting)


state 33

   27 setting: "header" '=' "filename" .

    $default  reduce using rule 27 (setting)


state 34

   29 setting: "max_events" '=' "integer" .

    $default  reduce using rule 29 (setting)


state 35

   28 setting: "basics" '=' "filename" .

    $default  reduce using rule 28 (setting)


state 36

    2 settings: "settings" '{' settings_list '}' ';' .

    $default  reduce using rule 2 (settings)


state 37

   14 settings_list: setting ';' settings_list .

    $default  reduce using rule 14 (settings_list)


state 38

   30 include: "#include" "include file" .

    $default  reduce using rule 30 (include)


state 39

    4 includes: "includes" '{' includes_list '}' . ';'

    ';'  shift, and go to state 53


state 40

   16 includes_list: include includes_list .

    $default  reduce using rule 16 (includes_list)


state 41

   43 return_type: "void" .

    $default  reduce using rule 43 (return_type)


state 42

   49 identifier: "atom" .

    $default  reduce using rule 49 (identifier)


state 43

   50 identifier: "identifier" .

    $default  reduce using rule 50 (identifier)


state 44

    8 basics_declaration: "basics" '{' basic_declarations . '}' ';'

    '}'  shift, and go to state 54


state 45

   19 basic_declarations: basic_declaration . ';'
   20                   | basic_declaration . ';' basic_declarations

    ';'  shift, and go to state 55


state 46

   32 basic_declaration: basic_declaration_cases .

    $default  reduce using rule 32 (basic_declaration)


state 47

   39 basic_declaration_cases: return_type . symbol_name parameter_list

    "atom"  shift, and go to state 56

    symbol_name  go to state 57


state 48

   44 return_type: type_identifier .

    $default  reduce using rule 44 (return_type)


state 49

   48 type_identifier: identifier .

    $default  reduce using rule 48 (type_identifier)


state 50

    6 types_declaration: "types" '{' . type_declarations '}' ';'

    "atom"  shift, and go to state 56

    type_declarations       go to state 58
    type_declaration        go to state 59
    type_declaration_cases  go to state 60
    symbol_name             go to state 61


state 51

   10 settables_declaration: "settables" . '{' settable_declarations '}' ';'

    '{'  shift, and go to state 62


state 52

    1 configuration: settings includes basics_declaration types_declaration settables_declaration . triggerables_declaration "end of file"

    "triggerables"  shift, and go to state 63

    $default  reduce using rule 11 (triggerables_declaration)

    triggerables_declaration  go to state 64


state 53

    4 includes: "includes" '{' includes_list '}' ';' .

    $default  reduce using rule 4 (includes)


state 54

    8 basics_declaration: "basics" '{' basic_declarations '}' . ';'

    ';'  shift, and go to state 65


state 55

   19 basic_declarations: basic_declaration ';' .
   20                   | basic_declaration ';' . basic_declarations

    "void"        shift, and go to state 41
    "atom"        shift, and go to state 42
    "identifier"  shift, and go to state 43

    $default  reduce using rule 19 (basic_declarations)

    basic_declarations       go to state 66
    basic_declaration        go to state 45
    basic_declaration_cases  go to state 46
    return_type              go to state 47
    type_identifier          go to state 48
    identifier               go to state 49


state 56

   45 symbol_name: "atom" .

    $default  reduce using rule 45 (symbol_name)


state 57

   39 basic_declaration_cases: return_type symbol_name . parameter_list

    '('  shift, and go to state 67

    parameter_list  go to state 68


state 58

    6 types_declaration: "types" '{' type_declarations . '}' ';'

    '}'  shift, and go to state 69


state 59

   17 type_declarations: type_declaration . ';'
   18                  | type_declaration . ';' type_declarations

    ';'  shift, and go to state 70


state 60

   31 type_declaration: type_declaration_cases .

    $default  reduce using rule 31 (type_declaration)


state 61

   37 type_declaration_cases: symbol_name . parameter_list
   38                       | symbol_name .

    '('  shift, and go to state 67

    $default  reduce using rule 38 (type_declaration_cases)

    parameter_list  go to state 71


state 62

   10 settables_declaration: "settables" '{' . settable_declarations '}' ';'

    "atom"  shift, and go to state 72

    settable_declarations  go to state 73
    settable_declaration   go to state 74


state 63

   12 triggerables_declaration: "triggerables" . '{' triggerable_declarations '}' ';'

    '{'  shift, and go to state 75


state 64

    1 configuration: settings includes basics_declaration types_declaration settables_declaration triggerables_declaration . "end of file"

    "end of file"  shift, and go to state 76


state 65

    8 basics_declaration: "basics" '{' basic_declarations '}' ';' .

    $default  reduce using rule 8 (basics_declaration)


state 66

   20 basic_declarations: basic_declaration ';' basic_declarations .

    $default  reduce using rule 20 (basic_declarations)


state 67

   40 parameter_list: '(' . parameter_types ')'
   41               | '(' . "void" ')'
   42               | '(' . ')'

    "void"        shift, and go to state 77
    "atom"        shift, and go to state 42
    "identifier"  shift, and go to state 43
    ')'           shift, and go to state 78

    parameter_types  go to state 79
    type_identifier  go to state 80
    identifier       go to state 49


state 68

   39 basic_declaration_cases: return_type symbol_name parameter_list .

    $default  reduce using rule 39 (basic_declaration_cases)


state 69

    6 types_declaration: "types" '{' type_declarations '}' . ';'

    ';'  shift, and go to state 81


state 70

   17 type_declarations: type_declaration ';' .
   18                  | type_declaration ';' . type_declarations

    "atom"  shift, and go to state 56

    $default  reduce using rule 17 (type_declarations)

    type_declarations       go to state 82
    type_declaration        go to state 59
    type_declaration_cases  go to state 60
    symbol_name             go to state 61


state 71

   37 type_declaration_cases: symbol_name parameter_list .

    $default  reduce using rule 37 (type_declaration_cases)


state 72

   33 settable_declaration: "atom" .

    $default  reduce using rule 33 (settable_declaration)


state 73

   10 settables_declaration: "settables" '{' settable_declarations . '}' ';'

    '}'  shift, and go to state 83


state 74

   21 settable_declarations: settable_declaration . ';'
   22                      | settable_declaration . ';' settable_declarations

    ';'  shift, and go to state 84


state 75

   12 triggerables_declaration: "triggerables" '{' . triggerable_declarations '}' ';'

    '+'  shift, and go to state 85
    '-'  shift, and go to state 86

    triggerable_declarations  go to state 87
    triggerable_declaration   go to state 88


state 76

    1 configuration: settings includes basics_declaration types_declaration settables_declaration triggerables_declaration "end of file" .

    $default  reduce using rule 1 (configuration)


state 77

   41 parameter_list: '(' "void" . ')'

    ')'  shift, and go to state 89


state 78

   42 parameter_list: '(' ')' .

    $default  reduce using rule 42 (parameter_list)


state 79

   40 parameter_list: '(' parameter_types . ')'

    ')'  shift, and go to state 90


state 80

   46 parameter_types: type_identifier .
   47                | type_identifier . ',' parameter_types

    ','  shift, and go to state 91

    $default  reduce using rule 46 (parameter_types)


state 81

    6 types_declaration: "types" '{' type_declarations '}' ';' .

    $default  reduce using rule 6 (types_declaration)


state 82

   18 type_declarations: type_declaration ';' type_declarations .

    $default  reduce using rule 18 (type_declarations)


state 83

   10 settables_declaration: "settables" '{' settable_declarations '}' . ';'

    ';'  shift, and go to state 92


state 84

   21 settable_declarations: settable_declaration ';' .
   22                      | settable_declaration ';' . settable_declarations

    "atom"  shift, and go to state 72

    $default  reduce using rule 21 (settable_declarations)

    settable_declarations  go to state 93
    settable_declaration   go to state 74


state 85

   34 triggerable_declaration: '+' . "atom"
   36                        | '+' . '!' "atom"

    "atom"  shift, and go to state 94
    '!'     shift, and go to state 95


state 86

   35 triggerable_declaration: '-' . "atom"

    "atom"  shift, and go to state 96


state 87

   12 triggerables_declaration: "triggerables" '{' triggerable_declarations . '}' ';'

    '}'  shift, and go to state 97


state 88

   23 triggerable_declarations: triggerable_declaration . ';'
   24                         | triggerable_declaration . ';' triggerable_declarations

    ';'  shift, and go to state 98


state 89

   41 parameter_list: '(' "void" ')' .

    $default  reduce using rule 41 (parameter_list)


state 90

   40 parameter_list: '(' parameter_types ')' .

    $default  reduce using rule 40 (parameter_list)


state 91

   47 parameter_types: type_identifier ',' . parameter_types

    "atom"        shift, and go to state 42
    "identifier"  shift, and go to state 43

    parameter_types  go to state 99
    type_identifier  go to state 80
    identifier       go to state 49


state 92

   10 settables_declaration: "settables" '{' settable_declarations '}' ';' .

    $default  reduce using rule 10 (settables_declaration)


state 93

   22 settable_declarations: settable_declaration ';' settable_declarations .

    $default  reduce using rule 22 (settable_declarations)


state 94

   34 triggerable_declaration: '+' "atom" .

    $default  reduce using rule 34 (triggerable_declaration)


state 95

   36 triggerable_declaration: '+' '!' . "atom"

    "atom"  shift, and go to state 100


state 96

   35 triggerable_declaration: '-' "atom" .

    $default  reduce using rule 35 (triggerable_declaration)


state 97

   12 triggerables_declaration: "triggerables" '{' triggerable_declarations '}' . ';'

    ';'  shift, and go to state 101


state 98

   23 triggerable_declarations: triggerable_declaration ';' .
   24                         | triggerable_declaration ';' . triggerable_declarations

    '+'  shift, and go to state 85
    '-'  shift, and go to state 86

    $default  reduce using rule 23 (triggerable_declarations)

    triggerable_declarations  go to state 102
    triggerable_declaration   go to state 88


state 99

   47 parameter_types: type_identifier ',' parameter_types .

    $default  reduce using rule 47 (parameter_types)


state 100

   36 triggerable_declaration: '+' '!' "atom" .

    $default  reduce using rule 36 (triggerable_declaration)


state 101

   12 triggerables_declaration: "triggerables" '{' triggerable_declarations '}' ';' .

    $default  reduce using rule 12 (triggerables_declaration)


state 102

   24 triggerable_declarations: triggerable_declaration ';' triggerable_declarations .

    $default  reduce using rule 24 (triggerable_declarations)
